--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,18 +1,22 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-.pnp
+/node_modules
+/.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
-coverage
+/coverage
 
 # next.js
-.next/
-out/
-build
+/.next/
+/out/
 
+# production
+/build
+bun.lockb
+.env
 # misc
 .DS_Store
 *.pem
@@ -21,16 +25,13 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
-# turbo
-.turbo
+# vercel
+.vercel
 
-.contentlayer
-.env
+# typescript
+*.tsbuildinfo
+next-env.d.ts
