--- a/frontend/components.json
+++ b/frontend/components.json
@@ -1,15 +1,17 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "default",
+  "rsc": true,
+  "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.js",
+    "config": "tailwind.config.ts",
     "css": "app/globals.css",
-    "baseColor": "slate",
-    "cssVariables": true
+    "baseColor": "zinc",
+    "cssVariables": false,
+    "prefix": ""
   },
-  "rsc": false,
   "aliases": {
-    "utils": "@/lib/utils",
-    "components": "@/components"
+    "components": "@/components",
+    "utils": "@/lib/utils"
   }
 }
